--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.14",
     "octokit": "^4.0.2",
     "puppeteer": "^20.4.0"
   }
